[kube-prometheus-stack] Add RBAC Proxy rule to Prom ClusterRole
We need to add a rule into the prometheus ClusterRole if we want to
scrap the node-exporter via the RBAC Proxy.

fixes 3338

Signed-off-by: Alexandre Nicolaie <alexandre.nicolaie@gmail.com>

--- a/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
+++ b/charts/kube-prometheus-stack/ci/03-non-defaults-values.yaml
@@ -79,5 +79,9 @@ kubeProxy:
         k8s-app: kube-proxy
 
 nodeExporter:
-  enabled: false
+  enabled: true
   forceDeployDashboards: true
+
+prometheus-node-exporter:
+  kubeRBACProxy:
+    enabled: true
