--- a/charts/prometheus-snmp-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-snmp-exporter/templates/daemonset.yaml
@@ -72,6 +72,9 @@ spec:
               subPath: {{ .subPath }}
               readOnly: {{ .readOnly }}
           {{- end }}
+          {{- with .Values.extraVolumeMounts }}
+          {{ toYaml . | nindent 12 }}
+          {{- end }}
       {{- if .Values.config }}
         - name: configmap-reload
           image: "{{ .Values.configmapReload.image.repository }}:{{ .Values.configmapReload.image.tag }}"
@@ -111,5 +114,8 @@ spec:
           secret:
             secretName: {{ .secretName }}
             defaultMode: {{ .defaultMode }}
+      {{- end }}
+      {{- with .Values.extraVolumes }}
+      {{ toYaml . | nindent 8 }}
       {{- end }}
 {{- end }}
