--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -58,6 +58,12 @@ extraSecretMounts: []
   #   readOnly: true
   #   defaultMode: 420
 
+# Additional volumes, e.g. for secrets used in an extraContainer
+extraVolumes: []
+
+# Additional volume mounts for snmp-exporter container
+extraVolumeMounts: []
+
 ## For RBAC support:
 rbac:
   # Specifies whether RBAC resources should be created
