feat(prometheus-snmp-exporter): add auth support
Signed-off-by: tr3mor <storozhenkopf@gmail.com>

--- a/charts/prometheus-snmp-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-snmp-exporter/templates/servicemonitor.yaml
@@ -24,6 +24,9 @@ spec:
       module: {{ .module | default $.Values.serviceMonitor.module }}
       target:
       - {{ .target }}
+      {{ if .auth }}
+      auth: {{ .auth }}
+      {{- end }}
     metricRelabelings:
       - sourceLabels: [instance]
         targetLabel: instance
