--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -193,6 +193,8 @@ serviceMonitor:
     # Module used for scraping. Overrides value set in serviceMonitor.module
     #   module:
     #     - if_mib
+    # Auth used for scraping.
+    # auth: test-auth
     # Map of labels for ServiceMonitor. Overrides value set in serviceMonitor.selector
     #   labels: {}
           # release: kube-prometheus-stack
