--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -194,7 +194,8 @@ serviceMonitor:
     #   module:
     #     - if_mib
     # Auth used for scraping.
-    # auth: test-auth
+    #   auth:
+    #     - test-auth
     # Map of labels for ServiceMonitor. Overrides value set in serviceMonitor.selector
     #   labels: {}
           # release: kube-prometheus-stack
