feat(systemd-exporter): allow mount extraVolumes
Signed-off-by: Arthur Le Roux <aleroux@wiremind.io>

--- a/charts/prometheus-systemd-exporter/values.yaml
+++ b/charts/prometheus-systemd-exporter/values.yaml
@@ -179,3 +179,12 @@ readinessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
+
+extraVolumes:
+  # - name: systemd-example
+  #   hostPath:
+  #     path: /var/run/example
+extraVolumeMounts:
+  # - mountPath: /var/run/example
+  #   name: systemd-example
+  #   readOnly: true
