--- a/charts/prometheus-systemd-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-systemd-exporter/templates/daemonset.yaml
@@ -81,6 +81,9 @@ spec:
             - name: systemd
               mountPath: /host/systemd
               readOnly: true
+        {{- if .Values.extraVolumeMounts }}
+          {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
+        {{- end }}
       hostNetwork: {{ .Values.hostNetwork }}
       hostPID: {{ .Values.hostPID }}
       {{- with .Values.affinity }}
@@ -102,3 +105,6 @@ spec:
         - name: systemd
           hostPath:
             path: /run/systemd
+        {{- if .Values.extraVolumes }}
+          {{- toYaml .Values.extraVolumes | nindent 8 }}
+        {{- end }}
