Apply suggestions from code review
Co-authored-by: Jan-Otto Kröpke <github@jkroepke.de>
Signed-off-by: koooge <koooooge@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus-operator/clusterrole.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/clusterrole.yaml
@@ -4,7 +4,7 @@ kind: ClusterRole
 metadata:
   name: {{ template "kube-prometheus-stack.fullname" . }}-operator
   labels:
-{{- include "kube-prometheus-stack.prometheus-operator.labels" . | indent 4 }}
+    {{- include "kube-prometheus-stack.prometheus-operator.labels" . | nindent 4 }}
 rules:
 - apiGroups:
   - monitoring.coreos.com
