--- a/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/deployment/deployment.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/deployment/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
     app: {{ template "kube-prometheus-stack.name" . }}-operator-webhook
-{{- include "kube-prometheus-stack.prometheus-operator-webhook.labels" . | indent 4 }}
+    {{- include "kube-prometheus-stack.prometheus-operator-webhook.labels" . | nindent 4 }}
 {{- if .Values.prometheusOperator.admissionWebhooks.deployment.labels }}
 {{ toYaml .Values.prometheusOperator.admissionWebhooks.deployment.labels | indent 4 }}
 {{- end }}
@@ -25,7 +25,7 @@ spec:
     metadata:
       labels:
         app: {{ template "kube-prometheus-stack.name" . }}-operator-webhook
-{{- include "kube-prometheus-stack.prometheus-operator-webhook.labels" . | indent 8 }}
+        {{- include "kube-prometheus-stack.prometheus-operator-webhook.labels" . | nindent 8 }}
         release: {{ $.Release.Name | quote }}
 {{- if .Values.prometheusOperator.admissionWebhooks.deployment.podLabels }}
 {{ toYaml .Values.prometheusOperator.admissionWebhooks.deployment.podLabels | indent 8 }}
