changed default of hostport to false
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -57,7 +57,7 @@ kubeRBACProxy:
   containerSecurityContext: {}
 
   port: 8100
-  hostPort: true
+  hostPort: false
 
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
