added default value for port name to values file instead of in daemonset template
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -200,7 +200,7 @@ spec:
           {{- end }}
           ports:
             - containerPort: {{ .Values.service.port}}
-              name: {{ default "http" .Values.kubeRBACProxy.portName }}
+              name: {{ .Values.kubeRBACProxy.portName }}
               {{- if .Values.kubeRBACProxy.hostPort }}
               hostPort: {{ .Values.service.port }}
               {{- end }}
