--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -56,7 +56,11 @@ kubeRBACProxy:
   ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container
   containerSecurityContext: {}
 
+  # Specify the port used for the daemonset
   port: 8100
+  # Specify the name of the container port
+  portName: http
+  # Configure a hostPort
   hostPort: false
 
   resources: {}
