Added Host's network and PID variables
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus-node-exporter/templates/psp.yaml
+++ b/charts/prometheus-node-exporter/templates/psp.yaml
@@ -21,9 +21,9 @@ spec:
     - 'downwardAPI'
     - 'persistentVolumeClaim'
     - 'hostPath'
-  hostNetwork: true
+  hostNetwork: {{ .Values.hostNetwork }}
   hostIPC: false
-  hostPID: true
+  hostPID: {{ .Values.hostPID }}
   hostPorts:
     - min: 0
       max: 65535
