Added support to turn off automountServiceAccountToken for Prometheus
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/kube-prometheus-stack/charts/crds/crds/crd-prometheuses.yaml
+++ b/charts/kube-prometheus-stack/charts/crds/crds/crd-prometheuses.yaml
@@ -68,6 +68,9 @@ spec:
             description: 'Specification of the desired behavior of the Prometheus
               cluster. More info: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#spec-and-status'
             properties:
+              automountServiceAccountToken:
+                description: Controls whether a service account token is automatically mounted for the Prometheus pods.
+                type: boolean
               additionalAlertManagerConfigs:
                 description: "AdditionalAlertManagerConfigs specifies a key of a Secret
                   containing additional Prometheus Alertmanager configurations. The
