changed comments for new vars and changed name of var to enable hostport
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -201,7 +201,7 @@ spec:
           ports:
             - containerPort: {{ .Values.service.port}}
               name: {{ .Values.kubeRBACProxy.portName }}
-              {{- if .Values.kubeRBACProxy.hostPort }}
+              {{- if .Values.kubeRBACProxy.enableHostPort }}
               hostPort: {{ .Values.service.port }}
               {{- end }}
             - containerPort: 8888
