--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -56,12 +56,12 @@ kubeRBACProxy:
   ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container
   containerSecurityContext: {}
 
-  # Specify the port used for the daemonset
+  # Specify the port used for the Node exporter container (upstream port)
   port: 8100
   # Specify the name of the container port
   portName: http
-  # Configure a hostPort
-  hostPort: false
+  # Configure a hostPort. If true, hostPort will be enabled in the container and set to service.port.
+  enableHostPort: false
 
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
