[prometheus-statsd-exporter] Reorder HPA target to fix ordering HPA target problem
Signed-off-by: gavin.jeong <gavin.jeong@sendbird.com>

--- a/charts/prometheus-statsd-exporter/templates/deployment.yaml
+++ b/charts/prometheus-statsd-exporter/templates/deployment.yaml
@@ -90,6 +90,10 @@ spec:
             - name: statsd-mapping-config
               mountPath: /etc/prometheus-statsd-exporter
           {{- end }}
+          {{- if .Values.lifecycle }}
+          lifecycle: 
+            {{- toYaml .Values.lifecycle | nindent 12 }}
+          {{- end }}
       {{- if or .Values.statsd.mappingConfigMapName .Values.statsd.mappingConfig }}
       volumes:
         - name: statsd-mapping-config
@@ -109,9 +113,5 @@ spec:
       {{- end }}
       {{- with .Values.tolerations }}
       tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.lifecycle }}
-      lifecycle:
         {{- toYaml . | nindent 8 }}
       {{- end }}
