--- a/charts/prometheus-statsd-exporter/values.yaml
+++ b/charts/prometheus-statsd-exporter/values.yaml
@@ -163,6 +163,11 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+lifecycle:
+  preStop:
+    exec:
+      command: ["sleep", "10"]
+
 nodeSelector: {}
 
 tolerations: []
