--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -391,8 +391,13 @@ namespaceOverride: ""
 ## Additional containers for export metrics to text file
 ##
 sidecars: []
-##  - name: nvidia-dcgm-exporter
-##    image: nvidia/dcgm-exporter:1.4.3
+#  - name: nvidia-dcgm-exporter
+#    image: nvidia/dcgm-exporter:1.4.3
+#    volumeMounts:
+#     - name: tmp
+#       mountPath: /tmp
+#  - name: nvidia-dcgm-exporter2
+#    image: nvidia/dcgm-exporter:1.4.3
 
 ## Volume for sidecar containers
 ##
