--- a/charts/prometheus-statsd-exporter/values.yaml
+++ b/charts/prometheus-statsd-exporter/values.yaml
@@ -163,10 +163,9 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-lifecycle:
-  preStop:
-    exec:
-      command: ["sleep", "10"]
+# Container lifecycle hooks
+# Ref. https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
+lifecycle: {}
 
 nodeSelector: {}
 
