hostNetwork is now default to false
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -302,7 +302,7 @@ rbac:
 endpoints: []
 
 # Expose the service to the host network
-hostNetwork: true
+hostNetwork: false
 
 # Share the host process ID namespace
 hostPID: true
