added notes for env var and for restart policy Added notes in vals files and restart policy Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -40,6 +40,8 @@ global:
 kubeRBACProxy:
   enabled: false
   env: {}
+  ##  env:
+  ##    VARIABLE: value
   image:
     registry: quay.io
     repository: brancz/kube-rbac-proxy
@@ -47,7 +49,7 @@ kubeRBACProxy:
     sha: ""
     pullPolicy: IfNotPresent
 
-  # List of additional cli arguments to configure kube-rbac-prxy
+  # List of additional cli arguments to configure kube-rbac-proxy
   # for example: --tls-cipher-suites, --log-file, etc.
   # all the possible args can be found here: https://github.com/brancz/kube-rbac-proxy#usage
   extraArgs: []
@@ -276,7 +278,8 @@ resources: {}
   #   cpu: 100m
   #   memory: 30Mi
 
-# CHANGED
+# Specify the container restart policy passed to the Node Export container
+# Possible Values: Always (default)|OnFailure|Never
 restartPolicy: Always
 
 serviceAccount:
