added definition in values file for volumemounts type
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -83,9 +83,9 @@ kubeRBACProxy:
     # limits:
     #  cpu: 100m
     #  memory: 64Mi
-  #   requests:
-  #    cpu: 10m
-  #    memory: 32Mi
+  # requests:
+  #  cpu: 10m
+  #  memory: 32Mi
 
 service:
   enabled: true
@@ -417,6 +417,7 @@ extraHostVolumeMounts: []
 #    hostPath: <hostPath>
 #    mountPath: <mountPath>
 #    readOnly: true|false
+#    type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
 #    mountPropagation: None|HostToContainer|Bidirectional
 
 
