--- a/charts/prometheus-statsd-exporter/values.yaml
+++ b/charts/prometheus-statsd-exporter/values.yaml
@@ -163,6 +163,10 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+# Container lifecycle hooks
+# Ref. https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
+lifecycle: {}
+
 nodeSelector: {}
 
 tolerations: []
