--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -980,7 +980,7 @@ grafana:
     #   hosts:
     #   - grafana.example.com
 
-  # # To make Grafana persistant (Using Statefulset)
+  # # To make Grafana persistent (Using Statefulset)
   # #
   # persistence:
   #   enabled: true
