--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -985,7 +985,7 @@ grafana:
   # persistence:
   #   enabled: true
   #   type: sts
-  #   storageClassName: <StorageClassName>
+  #   storageClassName: "storageClassName"
   #   accessModes:
   #     - ReadWriteOnce
   #   size: 20Gi
