[kube-prometheus-stack] Update values.yaml (#4075)
* Update values.yaml

There is no mention on how to persist Grafana in this file. I believe it would be more straight forward to add it here, comparing to reading the charts in order to understand the "how to"


Signed-off-by: Ali <115415312+xogoodnow@users.noreply.github.com>

* Update charts/kube-prometheus-stack/values.yaml

Co-authored-by: Quentin Bisson <quentin.bisson@gmail.com>
Signed-off-by: Ali <115415312+xogoodnow@users.noreply.github.com>

* Update charts/kube-prometheus-stack/values.yaml

Co-authored-by: Quentin Bisson <quentin.bisson@gmail.com>
Signed-off-by: Ali <115415312+xogoodnow@users.noreply.github.com>

* Update Chart.yaml

Incremented the chart version

Signed-off-by: Ali <115415312+xogoodnow@users.noreply.github.com>

---------

Signed-off-by: Ali <115415312+xogoodnow@users.noreply.github.com>
Co-authored-by: Quentin Bisson <quentin.bisson@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -996,6 +996,18 @@ grafana:
     #   hosts:
     #   - grafana.example.com
 
+  # # To make Grafana persistent (Using Statefulset)
+  # #
+  # persistence:
+  #   enabled: true
+  #   type: sts
+  #   storageClassName: "storageClassName"
+  #   accessModes:
+  #     - ReadWriteOnce
+  #   size: 20Gi
+  #   finalizers:
+  #     - kubernetes.io/pvc-protection
+
   sidecar:
     dashboards:
       enabled: true
