--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -395,7 +395,7 @@ secrets: []
 ##
 namespaceOverride: ""
 
-## Additional containers for export metrics to text file
+## Additional containers for export metrics to text file; fields image,imagePullPolicy,securityContext take default value from main container
 ##
 sidecars: []
 #  - name: nvidia-dcgm-exporter
@@ -403,15 +403,13 @@ sidecars: []
 #    volumeMounts:
 #     - name: tmp
 #       mountPath: /tmp
-#  - name: nvidia-dcgm-exporter2
-#    image: nvidia/dcgm-exporter:1.4.3
 
 ## Volume for sidecar containers
 ##
 sidecarVolumeMount: []
-##  - name: collector-textfiles
-##    mountPath: /run/prometheus
-##    readOnly: false
+#  - name: collector-textfiles
+#    mountPath: /run/prometheus
+#    readOnly: false
 
 ## Additional mounts from the host to sidecar containers
 ##
