[prometheus-blackbox-exporter] Use selectorLabel for pod
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/charts/prometheus-blackbox-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/daemonset.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "prometheus-blackbox-exporter.labels" . | nindent 8 }}
+        {{- include "prometheus-blackbox-exporter.selectorLabels" . | nindent 8 }}
         {{- if .Values.pod.labels }}
 {{ toYaml .Values.pod.labels | indent 8 }}
         {{- end }}
