--- a/charts/prometheus-blackbox-exporter/templates/deployment.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "prometheus-blackbox-exporter.labels" . | nindent 8 }}
+        {{- include "prometheus-blackbox-exporter.selectorLabels" . | nindent 8 }}
         {{- if .Values.pod.labels }}
 {{ toYaml .Values.pod.labels | indent 8 }}
         {{- end }}
