remove small fix for bug for later pr
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -220,7 +220,7 @@ spec:
             timeoutSeconds: 5
           {{- if .Values.kubeRBACProxy.resources }}
           resources:
-          {{- toYaml .Values.kubeRBACProxy.resources | nindent 12 }}
+          {{ toYaml .Values.kubeRBACProxy.resources | nindent 12 }}
           {{- end }}
           {{-  if .Values.kubeRBACProxy.env }}
           env:
