--- a/charts/prometheus-systemd-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-systemd-exporter/templates/daemonset.yaml
@@ -81,9 +81,9 @@ spec:
             - name: systemd
               mountPath: /host/systemd
               readOnly: true
-        {{- if .Values.extraVolumeMounts }}
-          {{- toYaml .Values.extraVolumeMounts | nindent 12 }}
-        {{- end }}
+            {{- with .Values.extraVolumeMounts }}
+              {{- toYaml . | nindent 12 }}
+            {{- end }}
       hostNetwork: {{ .Values.hostNetwork }}
       hostPID: {{ .Values.hostPID }}
       {{- with .Values.affinity }}
