--- a/charts/prometheus-systemd-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-systemd-exporter/templates/daemonset.yaml
@@ -105,6 +105,6 @@ spec:
         - name: systemd
           hostPath:
             path: /run/systemd
-        {{- if .Values.extraVolumes }}
-          {{- toYaml .Values.extraVolumes | nindent 8 }}
+        {{- with .Values.extraVolumes }}
+          {{- toYaml . | nindent 8 }}
         {{- end }}
