--- a/charts/prometheus-systemd-exporter/values.yaml
+++ b/charts/prometheus-systemd-exporter/values.yaml
@@ -180,7 +180,7 @@ readinessProbe:
   successThreshold: 1
   timeoutSeconds: 1
 
-extraVolumes:
+extraVolumes: []
   # - name: systemd-example
   #   hostPath:
   #     path: /var/run/example
