--- a/charts/prometheus-systemd-exporter/values.yaml
+++ b/charts/prometheus-systemd-exporter/values.yaml
@@ -184,7 +184,7 @@ extraVolumes: []
   # - name: systemd-example
   #   hostPath:
   #     path: /var/run/example
-extraVolumeMounts:
+extraVolumeMounts: []
   # - mountPath: /var/run/example
   #   name: systemd-example
   #   readOnly: true
