--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -3878,7 +3878,7 @@ prometheus:
     ## success after the WAL replay is complete. If set, the value should be
     ## greater than 60 (seconds). Otherwise it will be equal to 600 seconds (15
     ## minutes).
-    # maximumStartupDurationSeconds: 120
+    maximumStartupDurationSeconds: 0
 
   additionalRulesForClusterRole: []
   #  - apiGroups: [ "" ]
