--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -317,6 +317,16 @@ hostRootFsMount:
   # https://kubernetes.io/docs/concepts/storage/volumes/#mount-propagation
   mountPropagation: HostToContainer
 
+# Mount the node's proc file system (/) at /host/proc in the container
+hostProcFsMount:
+  enabled: false
+  mountPropagation: HostToContainer
+
+# Mount the node's sys file system (/) at /host/sys in the container
+hostSysFsMount:
+  enabled: true
+  mountPropagation: HostToContainer
+
 ## Assign a group of affinity scheduling rules
 ##
 affinity: {}
@@ -394,6 +404,7 @@ extraHostVolumeMounts: []
 #    hostPath: <hostPath>
 #    mountPath: <mountPath>
 #    readOnly: true|false
+#    type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
 #    mountPropagation: None|HostToContainer|Bidirectional
 
 ## Additional configmaps to be mounted.
