add support for restart policy
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -260,7 +260,8 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.tolerations }}
+      {{- with .Values.tolerations }
+      restartPolicy: {{ .Values.restartPolicy }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
