add support for containerport protocol
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -65,6 +65,8 @@ kubeRBACProxy:
   portName: http
   # Configure a hostPort. If true, hostPort will be enabled in the container and set to service.port.
   enableHostPort: false
+  # Configure the protocol for the container port
+  portProtocol: TCP
 
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
