--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -211,6 +211,7 @@ spec:
               {{- if .Values.kubeRBACProxy.enableHostPort }}
               hostPort: {{ .Values.service.port }}
               {{- end }}
+              protocol: {{ .Values.kubeRBACProxy.portProtocol }}
             - containerPort: 8888
               name: "http-healthz"
           readinessProbe:
