--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -401,14 +401,15 @@ extraArgs: []
 
 ## Additional mounts from the host to node-exporter container
 ##
-extraHostVolumeMounts: []
+#extraHostVolumeMounts: []
 #  - name: <mountName>
 #    hostPath: <hostPath>
 #    mountPath: <mountPath>
 #    readOnly: true|false
+#    mountPropagation: None|HostToContainer|Bidirectional
 #    https://kubernetes.io/docs/concepts/storage/volumes/#hostpath-volume-types
 #    type: "" (Default)|DirectoryOrCreate|Directory|FileOrCreate|File|Socket|CharDevice|BlockDevice
-#    mountPropagation: None|HostToContainer|Bidirectional
+
 
 ## Additional configmaps to be mounted.
 ##
