added with statement to make type optional and not be set
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -401,7 +401,7 @@ extraArgs: []
 
 ## Additional mounts from the host to node-exporter container
 ##
-#extraHostVolumeMounts: []
+extraHostVolumeMounts: []
 #  - name: <mountName>
 #    hostPath: <hostPath>
 #    mountPath: <mountPath>
