--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -271,7 +271,7 @@ resources: {}
 
 # Specify the container restart policy passed to the Node Export container
 # Possible Values: Always (default)|OnFailure|Never
-restartPolicy: Always
+restartPolicy: null
 
 serviceAccount:
   # Specifies whether a ServiceAccount should be created
