added with statement for port protocol
Signed-off-by: Nicole <nicolasaelf64@gmail.com>

--- a/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -211,7 +211,9 @@ spec:
               {{- if .Values.kubeRBACProxy.enableHostPort }}
               hostPort: {{ .Values.service.port }}
               {{- end }}
-              protocol: {{ .Values.kubeRBACProxy.portProtocol }}
+              {{- with .Values.kubeRBACProxy.portProtocol }}
+              protocol: {{ . }}
+              {{- end }}
             - containerPort: 8888
               name: "http-healthz"
           readinessProbe:
