--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -66,7 +66,7 @@ kubeRBACProxy:
   # Configure a hostPort. If true, hostPort will be enabled in the container and set to service.port.
   enableHostPort: false
   # Configure the protocol for the container port
-  portProtocol: TCP
+  portProtocol: null
 
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
